# django-tutorial

./: pyproject.toml
apps/: apps.py  models.py  urls.py  views.py
apps/static/apps/: style.css
apps/static/polls/: style.css
apps/templates/admin/: base_site.html
apps/templates/apps/: index.html
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
