[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["tae-30 <yuut0302@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
mysqlclient = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
